# nertc_zhengchen_qudou

./: .gitignore  CMakeLists.txt  README.md  config.py  run.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/nertc_sdk/: CMakeLists.txt  idf_component.yml
components/nertc_wake_up/: CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  assets.cc  idf_component.yml  mcp_server.cc  ota.cc  ota.h
main/audio/: audio_codec.cc  audio_codec.h  audio_service.cc  audio_service.h
main/audio/codecs/: box_audio_codec.cc
main/audio/wake_words/: afe_wake_word.cc
main/boards/common/: backlight.cc  board.cc  board.h  camera.h  dual_network_board.cc  esp32_camera.cc  esp32_camera.h  ml307_board.cc  ml307_board.h  power_save_timer.cc  wifi_board.cc
main/boards/zhengchen-qudou/: README.md  alarm.h  config.json  power_manager.h  zhengchen_qudou.cc
main/display/: clock_desktop_ui.cc  clock_desktop_ui.h  display.cc  display.h  lcd_display.cc  lcd_display.h  music_player_ui.cc  music_player_ui.h  oled_display.cc  settings_page_ui.cc  settings_page_ui.h
main/display/emo_gif/: CMakeLists.txt  gif_mapdata.py  icon_4G.c  icon_4G_num.c  icon_WiFi.c  icon_break.c  icon_cam.c  icon_net.c  icon_off.c  icon_on.c  icon_video.c  idf_component.yml  idle0.c  listening.c  listening0.c  png_data.py  qrcode.c  speaking0.c
main/display/lvgl_display/: emoji_collection.cc  lvgl_display.cc  lvgl_display.h  lvgl_font.cc  lvgl_font.h
main/display/time_font/: time_font.c
main/music_player/: mp3_online_player.cc  mp3_online_player.h  music_player.cc  music_player.h  music_player_api.h
main/protocols/: mqtt_protocol.cc  mqtt_protocol.h  nertc_protocol.cc  nertc_protocol.h  protocol.h  websocket_protocol.cc  websocket_protocol.h
partitions/v2/: 16m.csv
scripts/: PACKAGE_FIRMWARE_README.md  package_firmware.py
